--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -50,6 +50,24 @@ $border-radius--xl: $size--xl; // 48px
 $border-radius--xxl: $size--xxl; // 64px
 
 // -----------------------------------------------------------------------------
+// *  Containers
+// -----------------------------------------------------------------------------
+
+// -  <<----------<< Flexbox styles >>---------->>
+
+// $style1: 100%, 70px, #fo6d06;
+
+// @mixin box($width, $height, $background) {
+//   width: $width;
+//   height: $height;
+//   background-color: $background;
+// }
+
+// .fogdog {
+//   @include box($style1...);
+// }
+
+// -----------------------------------------------------------------------------
 // *  Typography
 // -----------------------------------------------------------------------------
 
