--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -3,5 +3,6 @@
 \* -------------------------------------------------------------------------- */
 
 footer {
+  background-color: rgba(70, 130, 180, 0.5);
   // ...
 }
