--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -3,5 +3,6 @@
 \* -------------------------------------------------------------------------- */
 
 header {
+  background-color: rgba(70, 130, 180, 0.5);
   // ...
 }
