--- a/assets/styles/scss/layout/_nav.scss
+++ b/assets/styles/scss/layout/_nav.scss
@@ -2,8 +2,12 @@
 *  _nav.scss: This partial file contains all default 'nav' styles.
 \* -------------------------------------------------------------------------- */
 
+// -  <<----------<< Generic >>---------->>
+
 nav ul {
-  padding: 0;
-  margin: 0;
   list-style: none;
 }
+
+// -  <<----------<< Specific >>---------->>
+
+
