--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -9,6 +9,9 @@
 }
 
 // #  <html>
+html {
+  font-size: calc(1rem + 0.25vw);
+}
 
 // #  <body>
 body {
@@ -16,8 +19,6 @@ body {
   margin: 0 auto;
   color: $color--text;
   font-family: $font-family--text;
-  font-size: $font-size--text;
-  // font-size: calc(1rem + 0.25vh); // ---> Good idea?
   font-weight: $font-weight--text;
   line-height: normal;
 }
