--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -44,6 +44,7 @@
 @import 'components/icon';
 @import 'components/card';
 @import 'components/switch';
+@import 'components/burger-menu';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
