style-main: header v8

--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -7,3 +7,5 @@
 @import 'mixins/breakpoints';
 @import 'mixins/box-shadows';
 @import 'mixins/wireframes';
+@import 'mixins/transitions';
+@import 'mixins/animations';
