--- a/assets/styles/scss/components/_burger-menu.scss
+++ b/assets/styles/scss/components/_burger-menu.scss
@@ -3,171 +3,166 @@
 \* -------------------------------------------------------------------------- */
 
 .container {
-  padding: 0px 15px 0px 15px;
+  padding: 0 15px;
 }
+
 @media (min-width: 0) {
   .container {
     max-width: 100%;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
-  .container:after {
-    content: ' ';
+
+  .container::after {
     display: block;
     clear: both;
+    content: ' ';
   }
 }
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
-  .container:after {
-    content: ' ';
+
+  .container::after {
     display: block;
     clear: both;
+    content: ' ';
   }
 }
+
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
-  .container:after {
-    content: ' ';
+
+  .container::after {
     display: block;
     clear: both;
+    content: ' ';
   }
 }
+
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
-  .container:after {
-    content: ' ';
+
+  .container::after {
     display: block;
     clear: both;
+    content: ' ';
   }
 }
+
 @media (min-width: 1200px) {
   .container {
     max-width: 1170px;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
   }
-  .container:after {
-    content: ' ';
+
+  .container::after {
     display: block;
     clear: both;
+    content: ' ';
   }
-}
-
-a {
-  text-decoration: none;
-  color: rgba(34, 34, 34, 0.8);
-}
-a:hover,
-a :focus {
-  color: black;
 }
 
 .menu-left a {
-  display: inline-block;
   position: relative;
-  padding-bottom: 0px;
+  display: inline-block;
+  padding-bottom: 0;
   transition: color 0.35s ease;
 }
-.menu-left a:before {
-  content: '';
-  display: block;
+
+.menu-left a::before {
   position: absolute;
-  left: 0;
   bottom: 0;
-  height: 2px;
+  left: 0;
+  display: block;
   width: 0;
+  height: 2px;
+  content: '';
   transition: width 0s ease, background 0.35s ease;
 }
-.menu-left a:after {
-  content: '';
-  display: block;
+
+.menu-left a::after {
   position: absolute;
   right: 0;
   bottom: 0;
-  height: 2px;
+  display: block;
   width: 0;
+  height: 2px;
   background: #000;
+  content: '';
   transition: width 0.35s ease;
 }
-.menu-left a:hover:before {
+
+.menu-left a:hover::before {
   width: 100%;
   background: #000;
   transition: width 0.35s ease;
 }
-.menu-left a:hover:after {
+
+.menu-left a:hover::after {
   width: 100%;
   background: transparent;
   transition: all 0s ease;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 0.5rem 0;
-  background: rgba(255, 255, 255, 0.92);
-  z-index: 3;
-  will-change: transform;
-  transition: background 0.3s,
-    -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
-    background 0.3s;
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1),
-    background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  transform: translateY(0);
-  -webkit-transform: translateY(0);
-}
+
+
 header nav .logo {
-  float: left;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
-  line-height: inherit;
-  font-weight: 500;
   color: black;
+  float: left;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: inherit;
 }
-header nav .logo:after {
-  content: '';
+
+header nav .logo::after {
   display: table;
   clear: both;
+  content: '';
 }
+
 header nav ul {
-  list-style: none;
   padding-left: 0;
   margin: 0;
+  list-style: none;
 }
+
 header nav ul li {
-  float: none;
   margin-left: 0;
+  float: none;
 }
+
 @media (min-width: 768px) {
   header nav ul li {
-    float: left;
     margin-left: 1rem;
+    float: left;
   }
 }
+
 header nav ul li a {
   display: block;
 }
+
 @media (min-width: 576px) {
   header nav ul li a {
     display: block;
-    padding: 0.425rem 0rem;
+    padding: 0.425rem 0;
   }
 }
 
@@ -175,72 +170,82 @@ header nav ul li a {
   ul {
     clear: both;
   }
+
   ul li {
     padding: 0.5em 0;
   }
 }
+
 .hide-nav {
+  transform: translateY(-120%) !important;
   transform: translateY(-120% !important);
-  -webkit-transform: translateY(-120%) !important;
 }
 
 ul.menu-left {
-  display: block;
-  max-height: 0;
-  overflow: hidden;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
   z-index: 10;
+  display: block;
+  overflow: hidden;
+  max-height: 0;
+  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
+
 @media (min-width: 768px) {
   ul.menu-left {
     display: block !important;
-    float: right;
     max-height: none;
+    float: right;
   }
 }
-ul.menu-left:before {
-  content: '';
+
+ul.menu-left::before {
   display: table;
   clear: both;
+  content: '';
 }
+
 ul.menu-left.collapse {
   max-height: 15em !important;
 }
 
 .nav-toggle {
   display: block;
-  border-radius: 5px;
-  background-color: transparent;
-  float: right;
-  height: 38px;
   width: 38px;
+  height: 38px;
+  padding: 8px;
+  background-color: transparent;
+  border-radius: 5px;
   cursor: pointer;
-  padding: 8px 8px;
+  float: right;
 }
+
 .nav-toggle.open span:first-child {
   transform: rotate(45deg) translate(4.4px, 4.4px);
 }
+
 .nav-toggle.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
+
 .nav-toggle.open span:last-child {
   transform: rotate(-45deg) translate(4.4px, -4.4px);
 }
+
 @media (min-width: 768px) {
   .nav-toggle {
     display: none;
   }
 }
+
 .nav-toggle span {
   position: relative;
   display: block;
-  height: 2px;
   width: 100%;
+  height: 2px;
   margin-top: 4px;
   background-color: #000;
   transition: all 0.25s;
@@ -248,14 +253,14 @@ ul.menu-left.collapse {
 
 .signature {
   position: fixed;
-  font-weight: 100;
   bottom: 10px;
-  color: #000;
   left: 0;
-  letter-spacing: 4px;
-  font-size: 10px;
   width: 100vw;
+  color: #000;
+  font-size: 10px;
+  font-weight: 100;
+  letter-spacing: 4px;
   text-align: center;
-  text-transform: uppercase;
   text-decoration: none;
+  text-transform: uppercase;
 }
