--- a/assets/styles/scss/layout/_section.scss
+++ b/assets/styles/scss/layout/_section.scss
@@ -2,6 +2,6 @@
 *  _section.scss: This partial file contains all default 'section' styles.
 \* -------------------------------------------------------------------------- */
 
-section div.box__container {
+section div.box-container {
   height: 100vh;
 }
