--- a/assets/styles/scss/layout/_nav.scss
+++ b/assets/styles/scss/layout/_nav.scss
@@ -4,10 +4,14 @@
 
 // -  <<----------<< Generic >>---------->>
 
-nav ul {
+nav {
+  width: 100%;
   list-style: none;
 }
 
 // -  <<----------<< Specific >>---------->>
 
-
+nav ul {
+  width: 100%;
+  list-style: none;
+}
