--- a/assets/styles/scss/components/_burger-menu.scss
+++ b/assets/styles/scss/components/_burger-menu.scss
@@ -44,18 +44,7 @@
   transition: all 0s ease;
 }
 
-nav .logo {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  margin-right: 1rem;
-  color: black;
-  float: left;
-  font-size: 1.25rem;
-  font-weight: 500;
-  line-height: inherit;
-}
-
-nav .logo::after {
+nav .logo-name::after {
   display: table;
   clear: both;
   content: '';
@@ -65,11 +54,6 @@ nav ul {
   padding-left: 0;
   margin: 0;
   list-style: none;
-}
-
-nav ul li {
-  margin-left: 0;
-  float: none;
 }
 
 @media (min-width: 768px) {
