--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -15,3 +15,19 @@ svg {
   color: $color--text;
   fill: $color--text;
 }
+
+.logo-name {
+  display: inline-block;
+  color: red;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: inherit;
+}
+
+.logo-image {
+  display: inline-block;
+  fill: red;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: inherit;
+}
