--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -10,6 +10,6 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 0.25rem 0;
+  // padding: 0.25rem 0;
   background-color: rgba(70, 130, 180, 0.5);
 }
