style-main: header v11

--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -2,7 +2,7 @@
 // +  Containers
 // -----------------------------------------------------------------------------
 
-// *  <<----------<< Section-Container >>---------->>
+// *  <<----------<< Box-container>>---------->>
 
 // #  Breakpoints
 @mixin box-container($breakpoint, $box-type: flex) {
@@ -10,13 +10,19 @@
   @if $breakpoint == xxs {
     display: $box-type;
     max-width: calc(#{$dimension--xs} - 0.1px);
-    padding: $size--xxs;
+    padding: $size--xs;
     @content;
   }
   // #  Breakpoint 2 - Extra Small - 40rem / 640px
   @else if $breakpoint == xs {
     max-width: calc(#{$dimension--s} - 0.1px);
     padding: $size--xs;
+
+    &::after {
+      display: block;
+      clear: both;
+      content: ' ';
+    }
     @content;
   }
   // #  Breakpoint 3 - Small - 60rem / 960px
@@ -28,23 +34,23 @@
   // #  Breakpoint 4 - Medium - 80rem / 1280px
   @else if $breakpoint == m {
     max-width: calc(#{$dimension--l} - 0.1px);
-    padding: $size--m;
+    padding: $size--s;
     @content;
   }
   // #  Breakpoint 5 - Large - 100rem / 1600px
   @else if $breakpoint == l {
     max-width: calc(#{$dimension--xl} - 0.1px);
-    padding: $size--l;
+    padding: $size--m;
     @content;
   }
   // #  Breakpoint 6 - Extra Large - 120rem / 1920px
   @else if $breakpoint == xl {
-    padding: $size--xl;
+    padding: $size--m;
     @content;
   }
   // #  Breakpoint 7 - Extra Extra Large - 140rem / 2240px
   @else if $breakpoint == xxl {
-    padding: $size--xxl;
+    padding: $size--l;
     @content;
   }
   // #  Invalid arguments!
