--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -77,11 +77,17 @@ h3 {
 
 // #  <hr>
 
-// #  <li>
-
 // #  <ol>
 
 // #  <ul>
+ul {
+  display: flex;
+}
+
+// #  <li>
+// li {
+//   display: inline-flex;
+// }
 
 // #  <p>
 p {
