--- a/assets/styles/scss/components/_burger-menu.scss
+++ b/assets/styles/scss/components/_burger-menu.scss
@@ -2,160 +2,8 @@
 *  _burger-menu.scss: This partial file contains all 'burger-menu' styles.
 \* -------------------------------------------------------------------------- */
 
-.menu-left a {
-  position: relative;
-  display: inline-block;
-  padding-bottom: 0;
-  transition: color 0.35s ease;
-}
+// -  <<----------<< Generic >>---------->>
 
-.menu-left a::before {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 0;
-  height: 2px;
-  content: '';
-  transition: width 0s ease, background 0.35s ease;
-}
+// ...
 
-.menu-left a::after {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #000;
-  content: '';
-  transition: width 0.35s ease;
-}
-
-.menu-left a:hover::before {
-  width: 100%;
-  background: #000;
-  transition: width 0.35s ease;
-}
-
-.menu-left a:hover::after {
-  width: 100%;
-  background: transparent;
-  transition: all 0s ease;
-}
-
-nav .logo-name::after {
-  display: table;
-  clear: both;
-  content: '';
-}
-
-nav ul {
-  padding-left: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (min-width: 768px) {
-  nav ul li {
-    margin-left: 1rem;
-    float: left;
-  }
-}
-
-nav ul li a {
-  display: block;
-}
-
-@media (min-width: 576px) {
-  nav ul li a {
-    display: block;
-    padding: 0.425rem 0;
-  }
-}
-
-@media (max-width: 768px) {
-  ul {
-    clear: both;
-  }
-
-  ul li {
-    padding: 0.5em 0;
-  }
-}
-
-.hide-nav {
-  transform: translateY(-120%) !important;
-  transform: translateY(-120% !important);
-}
-
-ul.menu-left {
-  z-index: 10;
-  display: block;
-  overflow: hidden;
-  max-height: 0;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-
-@media (min-width: 768px) {
-  ul.menu-left {
-    display: block !important;
-    max-height: none;
-    float: right;
-  }
-}
-
-ul.menu-left::before {
-  display: table;
-  clear: both;
-  content: '';
-}
-
-ul.menu-left.collapse {
-  max-height: 15em !important;
-}
-
-.nav-toggle {
-  display: block;
-  width: 38px;
-  height: 38px;
-  padding: 8px;
-  background-color: transparent;
-  border-radius: 5px;
-  cursor: pointer;
-  float: right;
-}
-
-.nav-toggle.open span:first-child {
-  transform: rotate(45deg) translate(4.4px, 4.4px);
-}
-
-.nav-toggle.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
-}
-
-.nav-toggle.open span:last-child {
-  transform: rotate(-45deg) translate(4.4px, -4.4px);
-}
-
-@media (min-width: 768px) {
-  .nav-toggle {
-    display: none;
-  }
-}
-
-.nav-toggle span {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 2px;
-  margin-top: 4px;
-  background-color: #000;
-  background-color: yellow;
-  transition: all 0.25s;
-}
+// -  <<----------<< Specific >>---------->>
